--- a/htmldoc/src/TFragment.h.html
+++ b/htmldoc/src/TFragment.h.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Wed Sep  3 16:23:52 2014            -->
+<!--   Date: Wed Sep  3 16:39:06 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -22,7 +22,7 @@
 <span class="cpp">#ifndef TFRAGMENT_H</span>
 <span class="cpp">#define TFRAGMENT_H</span>
 
-<span class="cpp">#include "Globals.h"</span>
+<span class="cpp">#include "<a href="../Globals.h">Globals.h</a>"</span>
 
 <span class="cpp">#include&lt;vector&gt;</span>
 <span class="comment">//#include&lt;stdint.h&gt;</span>
@@ -89,7 +89,7 @@
    <span class="keyword">using</span> <a href="../#TObject:TObject" title="TObject TObject::TObject() or overloads">TObject</a>::<a href="../TFragment.html#TFragment:Print" title="void TFragment::Print(Option_t* opt=&quot;&quot;)">Print</a>; 
    <span class="keyword">virtual</span> <span class="keyword">void</span> <a href="../TFragment.html#TFragment:Print" title="void TFragment::Print(Option_t* opt=&quot;&quot;)">Print</a>(<a href="../ListOfTypes.html#Option_t">Option_t</a> *opt = <span class="string">""</span>); <span class="comment">//!</span>
     
-   ClassDef(<a href="../TFragment.html">TFragment</a>,0);  <span class="comment">// Event Fragments</span>
+   ClassDef(<a href="../TFragment.html">TFragment</a>,3);  <span class="comment">// Event Fragments</span>
 };
 <span class="cpp">#endif // TFRAGMENT_H</span>
 </pre>
@@ -100,7 +100,7 @@
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-03 16:23 </em><em>&raquo; Last generated: 2014-09-03 16:23</em><br />
+<em>&raquo; Last changed: 2014-09-03 16:39 </em><em>&raquo; Last generated: 2014-09-03 16:39</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
