--- a/htmldoc/TGRSIRunInfo.html
+++ b/htmldoc/TGRSIRunInfo.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Wed Sep  3 16:23:53 2014            -->
+<!--   Date: Wed Sep  3 16:39:07 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -19,7 +19,7 @@
 <body  onload="javascript:SetValuesFromCookie();"><div id="body_content">
 <div id="root_header"><img src="http://root.cern.ch/drupal/sites/default/files/rootdrawing-logo.png" alt="ROOT logo"/></div>
 <a name="TopOfPage"></a>
-<script type="text/javascript">WriteFollowPageBox('class TGRSIRunInfo','','/home/rdunlop/Programs/GRSISort/include/TGRSIRunInfo.h');</script>
+<script type="text/javascript">WriteFollowPageBox('class TGRSIRunInfo','','TGRSIRunInfo.h');</script>
 <div id="toplinks">
 <div class="descrhead"><div class="descrheadcontent">
 <span class="descrtitle">Quick Links:</span>
@@ -53,7 +53,7 @@ return false;}
 </div>
 <div class="location">
 <a class="locationlevel" href="index.html">GRSISort</a>
- &#187; <a class="locationlevel" href="./(UNKNOWN)_Index.html">(UNKNOWN)</a>
+ &#187; <a class="locationlevel" href="./INCLUDE_Index.html">INCLUDE</a>
  &#187; <a class="locationlevel" href="#TopOfPage">TGRSIRunInfo</a>
 </div>
 <div class="dropshadow"><div class="withshadow"><h1><a name="TGRSIRunInfo:description"></a>class TGRSIRunInfo: public TObject</h1>
@@ -456,7 +456,7 @@ else
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: Wed Sep  3 16:23:53 2014 </em><em>&raquo; Last generated: 2014-09-03 16:23</em><br />
+<em>&raquo; Last changed: Wed Sep  3 16:39:07 2014 </em><em>&raquo; Last generated: 2014-09-03 16:39</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
