--- a/htmldoc/src/TChannel.h.html
+++ b/htmldoc/src/TChannel.h.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Wed Sep  3 16:23:52 2014            -->
+<!--   Date: Wed Sep  3 16:39:06 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -58,7 +58,7 @@
 <span class="comment">//#include&lt;TIter.h&gt;</span>
 
 <span class="cpp">#include"<a href="../TFragment.h">TFragment.h</a>"</span>
-<span class="cpp">#include"Globals.h"</span>
+<span class="cpp">#include"<a href="../Globals.h">Globals.h</a>"</span>
 
 <span class="keyword">class</span> <a href="../TChannel.html">TChannel</a> : <span class="keyword">public</span> <a href="../#TNamed:TNamed" title="TNamed TNamed::TNamed() or overloads">TNamed</a>	{
 
@@ -196,7 +196,7 @@
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-03 16:23 </em><em>&raquo; Last generated: 2014-09-03 16:23</em><br />
+<em>&raquo; Last changed: 2014-09-03 16:39 </em><em>&raquo; Last generated: 2014-09-03 16:39</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
