Updates to TChannel header file for Html

--- a/htmldoc/ClassIndex.html
+++ b/htmldoc/ClassIndex.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Wed Sep  3 16:59:00 2014            -->
+<!--   Date: Mon Sep  8 13:16:39 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -61,7 +61,7 @@ return false;}
 <a href="#idx14">TX</a>
 </div><br />
 <ul id="indx">
-<li class="idxl0"><a name="idx0"></a><a href="./TChannel.html"><span class="typename">TChannel</span></a> </li>
+<li class="idxl0"><a name="idx0"></a><a href="./TChannel.html"><span class="typename">TChannel</span></a> Contains the Digitizer Information</li>
 <li class="idxl1"><a name="idx1"></a><a href="./TDataParser.html"><span class="typename">TDataParser</span></a> </li>
 <li class="idxl0"><a name="idx2"></a><a href="./TFragment.html"><span class="typename">TFragment</span></a> Event Fragments</li>
 <li class="idxl1"><a name="idx3"></a><a href="./TFragmentQueue.html"><span class="typename">TFragmentQueue</span></a> </li>
@@ -82,7 +82,7 @@ return false;}
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-03 16:59 </em><em>&raquo; Last generated: 2014-09-03 16:59</em><br />
+<em>&raquo; Last changed: 2014-09-08 13:16 </em><em>&raquo; Last generated: 2014-09-08 13:16</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
